--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -42,6 +42,7 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-l">My work filter</h2>
         <div class="xui-alert-link__number">2 </div>
         <div class="govuk-!-padding-bottom-6"></div>
+        <p>To be built by developer based on MIRO - v3.2</p>
         <div class="govuk-!-padding-bottom-9"></div>
         <!-- SECTION BREAK -->
 
@@ -161,7 +162,7 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-y?usertype=judiciary&">All work - tab - Tasks - Judge Beech - Priority yellow</a><br>Checked with v3.2</p>
 
 
-  <h2 class="govuk-heading-m">TASKS - Reassign tasks from Judge Beech to Judge Birch</h2>
+  <h2 class="govuk-heading-m">TASKS - Reassign tasks from Judge Beech<br> to Judge Birch</h2>
   <div class="xui-alert-link__number">3 </div>
   <div class="govuk-!-padding-bottom-6"></div>
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp?usertype=judiciary&">All work - tab - Tasks - Judge Beech</a><br>Checked with v3.2</p>
@@ -209,16 +210,15 @@ GOV.UK Prototype Kit
 
 
 
-
-
-
-
-
   </div>
+
+
+
+
 
   <div style="width: 800px;">
 
-    <!-- JUDICIARY -->
+    <!-- STAFF -->
     <h2 class="govuk-heading-l">My work staff</h2>
     <div class="xui-alert-link__number">1 </div>
     <div class="govuk-!-padding-bottom-6"></div>
@@ -244,6 +244,7 @@ GOV.UK Prototype Kit
     <h2 class="govuk-heading-l">My work filter</h2>
     <div class="xui-alert-link__number">2 </div>
     <div class="govuk-!-padding-bottom-6"></div>
+    <p>To be built by developer based on MIRO - v3.2</p>
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
@@ -345,6 +346,74 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-2017?usertype=staff&">My access - tab - case details- Specific</a><br>Checked with DS - v3.1.1</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=staff&">My access - tab - Specific - viewed</a><br>Checked with DS - v3.1.1</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=staff&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.1.1</p>
+
+
+  <p class="govuk-body govuk-!-margin-bottom-9"></p>
+
+    <h2 class="govuk-heading-xl">All Work</h2>
+    <h2 class="govuk-heading-m">TASKS - View tasks not yet assigned</h2>
+    <div class="xui-alert-link__number">1 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork?usertype=staff&">All work - tab - Tasks All</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-none?usertype=staff&">All work - tab - Tasks none assigned</a><br>Checked with v3.2</p>
+
+    <h2 class="govuk-heading-m">TASKS - View all tasks assigned to Judge Beech</h2>
+    <div class="xui-alert-link__number">2 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp?usertype=staff&">All work - tab - Tasks - Judge Beech</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-y?usertype=staff&">All work - tab - Tasks - Judge Beech - Priority yellow</a><br>Checked with v3.2</p>
+
+
+    <h2 class="govuk-heading-m">TASKS - Reassign tasks from Judge Beech<br>to Judge Birch</h2>
+    <div class="xui-alert-link__number">3 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp?usertype=staff&">All work - tab - Tasks - Judge Beech</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-o?usertype=staff&">All work - tab - Tasks - Judge Beech - open</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign-t?usertype=staff&">All work - tab - Tasks - Reassign - add name</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign-tb?usertype=staff&">All work - tab - Tasks - Reassign - Check your changes</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-r?usertype=staff&">All work - tab - Tasks - task complete</a><br>Checked with v3.2</p>
+
+
+    <h2 class="govuk-heading-m">CASES - View all cases with judicial allocations</h2>
+    <div class="xui-alert-link__number">4 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases?usertype=staff&">All work - tab - Cases - Judicial</a><br>Checked with v3.2</p>
+
+
+
+    <h2 class="govuk-heading-m">CASES - View all cases for Judge Beech</h2>
+    <div class="xui-alert-link__number">5 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases?usertype=staff&">All work - tab - Cases - Judicial</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-jb?usertype=staff&">All work - tab - Cases - Judge Beech</a><br>Checked with v3.2</p>
+
+
+    <h2 class="govuk-heading-m">CASES - Reallocate case for Judge Beech </h2>
+    <div class="xui-alert-link__number">6 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases?usertype=staff&">All work - tab - Cases - all cases </a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-jb?usertype=staff&">All work - tab - Cases - Judge Beech</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-jb-0?usertype=staff&">All work - tab - Cases - Judge Beech - open</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-cases-real?usertype=staff&">All work - tab - Cases - Reassign </a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-cases-real-chk?usertype=staff&">All work - tab - Cases - Reassign - Check your changes</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-jb-r?usertype=staff&">All work - tab - Cases - task complete</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-r?usertype=staff&">All work - tab - Cases - all cases </a><br>Checked with v3.2</p>
+
+
+    <h2 class="govuk-heading-m">ALL WORK OTHER FEATURES </h2>
+
+    <div class="govuk-!-padding-bottom-6"></div>
+      <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-o?usertype=staff&">Launch page - assigned</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/mark-as-done?usertype=staff&">Mark a task as done</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/cancel-task?usertype=staff&">Cancel a task</a><br>Checked with v3.2</p>
+      <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=staff&">Unassign a task</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-none-o?usertype=staff&">Launch page - unassigned</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/assign-task?usertype=staff&">Assign a task</a><br>Checked with v3.2</p>
+
+
+
+
+
     </div>
 
 
