--- a/app/views/workallocation/pages/wa-allwork-none-at.html
+++ b/app/views/workallocation/pages/wa-allwork-none-at.html
@@ -103,7 +103,7 @@ My work
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none" checked="true">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          None / available tasks
+          None / Available tasks
         </label>
       </div>
       <div class="govuk-radios__item">
