updates based on research and tech updates

--- a/app/views/searchcases/pages/noresults.html
+++ b/app/views/searchcases/pages/noresults.html
@@ -19,24 +19,33 @@ Case details
           </div>
     </div>
 
-    <!--<p><a href="search.html">Change search</a></p>-->
+    <p>Try searching again. </p>
+
+    <p>You might be able to get more accurate results if you:</p>
+
+    <ul style="width:700px;">
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">use an asterisk (*) in a field you didn't use previously, for example 'J* Smith'</li>
+        <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">search using different criteria</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">correct any wrong information</li>
+    </ul>
 
 
-<form
-    action="/searchcases/pages/search"
-    name="aspnetForm"
-    method="get"
-    id="aspnetForm"
-    autocomplete="off"
-    >
+    <form
+        action="/searchcases/pages/search"
+        name="aspnetForm"
+        method="get"
+        id="aspnetForm"
+        autocomplete="off"
+        >
 
-        <div class="govuk-form-group  govuk-!-margin-top-7" >
-            <button class="govuk-button" data-module="govuk-button">
-                Search again
-            </button>
-        </div>
+            <div class="govuk-form-group  govuk-!-margin-top-7" >
+                <button class="govuk-button" data-module="govuk-button">
+                    Search again
+                </button>
+            </div>
 
-</form>
+    </form>
 
 
 
