--- a/app/views/searchcases/pages/toomanyresults.html
+++ b/app/views/searchcases/pages/toomanyresults.html
@@ -15,11 +15,23 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-xl">Something went wrong</h1>
+               <h1 class="govuk-heading-xl">Too many results found</h1>
           </div>
     </div>
 
-    <p>Your search has returned too many results to display.</p>
+    <p>Try searching again. </p>
+
+    <p>You might be able to get more accurate results by:</p>
+
+    <ul style="width:700px;">
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">searching for as many fields as possible</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">using an asterisk (*) in a field you didn't use previously - this will help you to search for one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
+        <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
+
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">correcting any wrong information so you return more accurate results</li>
+    </ul>
+
+
 
 <form
     action="/searchcases/pages/search"
