--- a/app/views/searchcases/pages/toomanyresults.html
+++ b/app/views/searchcases/pages/toomanyresults.html
@@ -28,7 +28,7 @@ Case details
         <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">using an asterisk (*) in a field you didn't use previously - this will help you to search for one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
         <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
 
-        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">correcting any wrong information so you return more accurate results</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">correcting any wrong information</li>
     </ul>
 
 
